# YASS

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  MakefileAntigo  README.md  clean.bat  run.bat  run.sh
include/application/: Alien.h  EndState.h  GameData.h  Minion.h  PenguinBody.h  PenguinCannon.h  StageState.h  TitleState.h
include/engine/: Alien.h  Bullet.h  Camera.h  CameraFollower.h  Collider.h  Collision.hxx  Component.h  Face.h  Game.h  GameObject.h  InputManager.h  Mat.h  Minion.h  Music.h  Resources.h  SDL_include.h  Sound.h  Sprite.h  StageState.h  State.h  Text.h  TileMap.h  TileSet.h  Timer.h  Using.h
old/: Face.cpp  bkp.clangd
src/: main.cpp  test.cpp
src/application/: Alien.cpp  EndState.cpp  Main.cpp  Minion.cpp  PenguinBody.cpp  PenguinCannon.cpp  StageState.cpp  TitleState.cpp
src/engine/: Alien.cpp  Bullet.cpp  Camera.cpp  CameraFollower.cpp  Collider.cpp  ColliderRender.cxx  Collision.cpp  Face.cpp  Game.cpp  GameObject.cpp  InputManager.cpp  Mat.cpp  Minion.cpp  Music.cpp  Resources.cpp  Sound.cpp  Sprite.cpp  StageState.cpp  State.cpp  Text.cpp  TileMap.cpp  TileSet.cpp  Timer.cpp
